--- a/decks/fiftyTwo.yaml
+++ b/decks/fiftyTwo.yaml
@@ -8,416 +8,416 @@
       name: instructionCard
     1:
       name: 'Ace of Spades'
-      face: 'faces/spades-ace.svg'
-      back: 'back/deck-back.svg'
+      face: 'faces/SVG-cards-1.3/ace_of_spades.svg'
+      back: 'backs/Reverso_baraja.svg'
       species: ace
       suit: spades
       value: 1
       hierarchicalValue: 52
     2:
       name: 'Deuce of Spades'
-      face: 'faces/spades-deuce.svg'
-      back: 'back/deck-back.svg'
+      face: 'faces/SVG-cards-1.3/deuce_of_spades.svg'
+      back: 'backs/Reverso_baraja.svg'
       species: deuce
       suit: spades
       value: 2
       hierarchicalValue: 4
     3:
       name: 'Three of Spades'
-      face: 'faces/spades-three.svg'
-      back: 'back/deck-back.svg'
+      face: 'faces/SVG-cards-1.3/three_of_spades.svg'
+      back: 'backs/Reverso_baraja.svg'
       species: three
       suit: spades
       value: 3
       hierarchicalValue: 8
     4:
       name: 'Four of Spades'
-      face: 'faces/spades-four.svg'
-      back: 'back/deck-back.svg'
+      face: 'faces/SVG-cards-1.3/four_of_spades.svg'
+      back: 'backs/Reverso_baraja.svg'
       species: four
       suit: spades
       value: 4
       hierarchicalValue: 12
     5:
       name: 'Five of Spades'
-      face: 'faces/spades-five.svg'
-      back: 'back/deck-back.svg'
+      face: 'faces/SVG-cards-1.3/five_of_spades.svg'
+      back: 'backs/Reverso_baraja.svg'
       species: five
       suit: spades
       value: 5
       hierarchicalValue: 16
     6:
       name: 'Six of Spades'
-      face: 'faces/spades-six.svg'
-      back: 'back/deck-back.svg'
+      face: 'faces/SVG-cards-1.3/six_of_spades.svg'
+      back: 'backs/Reverso_baraja.svg'
       species: six
       suit: spades
       value: 6
       hierarchicalValue: 20
     7:
       name: 'Seven of Spades'
-      face: 'faces/spades-seven.svg'
-      back: 'back/deck-back.svg'
+      face: 'faces/SVG-cards-1.3/seven_of_spades.svg'
+      back: 'backs/Reverso_baraja.svg'
       species: seven
       suit: spades
       value: 7
       hierarchicalValue: 24
     8:
       name: 'Eight of Spades'
-      face: 'faces/spades-eight.svg'
-      back: 'back/deck-back.svg'
+      face: 'faces/SVG-cards-1.3/eight_of_spades.svg'
+      back: 'backs/Reverso_baraja.svg'
       species: eight
       suit: spades
       value: 8
       hierarchicalValue: 28
     9:
       name: 'Nine of Spades'
-      face: 'faces/spades-nine.svg'
-      back: 'back/deck-back.svg'
+      face: 'faces/SVG-cards-1.3/nine_of_spades.svg'
+      back: 'backs/Reverso_baraja.svg'
       species: nine
       suit: spades
       value: 9
       hierarchicalValue: 32
     10:
       name: 'Ten of Spades'
-      face: 'faces/spades-ten.svg'
-      back: 'back/deck-back.svg'
+      face: 'faces/SVG-cards-1.3/ten_of_spades.svg'
+      back: 'backs/Reverso_baraja.svg'
       species: ten
       suit: spades
       value: 10
       hierarchicalValue: 36
     11:
       name: 'Jack of Spades'
-      face: 'faces/spades-jack.svg'
-      back: 'back/deck-back.svg'
+      face: 'faces/SVG-cards-1.3/jack_of_spades2.svg'
+      back: 'backs/Reverso_baraja.svg'
       species: jack
       suit: spades
       value: 11
       hierarchicalValue: 40
     12:
       name: 'Queen of Spades'
-      face: 'faces/spades-queen.svg'
-      back: 'back/deck-back.svg'
+      face: 'faces/SVG-cards-1.3/queen_of_spades2.svg'
+      back: 'backs/Reverso_baraja.svg'
       species: queen
       suit: spades
       value: 12
       hierarchicalValue: 44
     13:
       name: 'King of Spades'
-      face: 'faces/spades-king.svg'
-      back: 'back/deck-back.svg'
+      face: 'faces/SVG-cards-1.3/king_of_spades2.svg'
+      back: 'backs/Reverso_baraja.svg'
       species: king
       suit: spades
       value: 13
       hierarchicalValue: 48
     14:
       name: 'Ace of Hearts'
-      face: 'faces/hearts-ace.svg'
-      back: 'back/deck-back.svg'
+      face: 'faces/SVG-cards-1.3/ace_of_hearts.svg'
+      back: 'backs/Reverso_baraja.svg'
       species: ace
       suit: hearts
       value: 1
       hierarchicalValue: 51
     15:
       name: 'Deuce of Hearts'
-      face: 'faces/hearts-deuce.svg'
-      back: 'back/deck-back.svg'
+      face: 'faces/SVG-cards-1.3/deuce_of_hearts.svg'
+      back: 'backs/Reverso_baraja.svg'
       species: deuce
       suit: hearts
       value: 2
       hierarchicalValue: 3
     16:
       name: 'Three of Hearts'
-      face: 'faces/hearts-three.svg'
-      back: 'back/deck-back.svg'
+      face: 'faces/SVG-cards-1.3/three_of_hearts.svg'
+      back: 'backs/Reverso_baraja.svg'
       species: three
       suit: hearts
       value: 3
       hierarchicalValue: 7
     17:
       name: 'Four of Hearts'
-      face: 'faces/hearts-four.svg'
-      back: 'back/deck-back.svg'
+      face: 'faces/SVG-cards-1.3/four_of_hearts.svg'
+      back: 'backs/Reverso_baraja.svg'
       species: four
       suit: hearts
       value: 4
       hierarchicalValue: 11
     18:
       name: 'Five of Hearts'
-      face: 'faces/hearts-five.svg'
-      back: 'back/deck-back.svg'
+      face: 'faces/SVG-cards-1.3/five_of_hearts.svg'
+      back: 'backs/Reverso_baraja.svg'
       species: five
       suit: hearts
       value: 5
       hierarchicalValue: 15
     19:
       name: 'Six of Hearts'
-      face: 'faces/hearts-six.svg'
-      back: 'back/deck-back.svg'
+      face: 'faces/SVG-cards-1.3/six_of_hearts.svg'
+      back: 'backs/Reverso_baraja.svg'
       species: six
       suit: hearts
       value: 6
       hierarchicalValue: 19
     20:
       name: 'Seven of Hearts'
-      face: 'faces/hearts-seven.svg'
-      back: 'back/deck-back.svg'
+      face: 'faces/SVG-cards-1.3/seven_of_hearts.svg'
+      back: 'backs/Reverso_baraja.svg'
       species: seven
       suit: hearts
       value: 7
       hierarchicalValue: 23
     21:
       name: 'Eight of Hearts'
-      face: 'faces/hearts-eight.svg'
-      back: 'back/deck-back.svg'
+      face: 'faces/SVG-cards-1.3/eight_of_hearts.svg'
+      back: 'backs/Reverso_baraja.svg'
       species: eight
       suit: hearts
       value: 8
       hierarchicalValue: 27
     22:
       name: 'Nine of Hearts'
-      face: 'faces/hearts-nine.svg'
-      back: 'back/deck-back.svg'
+      face: 'faces/SVG-cards-1.3/nine_of_hearts.svg'
+      back: 'backs/Reverso_baraja.svg'
       species: nine
       suit: hearts
       value: 9
       hierarchicalValue: 31
     23:
       name: 'Ten of Hearts'
-      face: 'faces/hearts-ten.svg'
-      back: 'back/deck-back.svg'
+      face: 'faces/SVG-cards-1.3/ten_of_hearts.svg'
+      back: 'backs/Reverso_baraja.svg'
       species: ten
       suit: hearts
       value: 10
       hierarchicalValue: 35
     24:
       name: 'Jack of Hearts'
-      face: 'faces/hearts-jack.svg'
-      back: 'back/deck-back.svg'
+      face: 'faces/SVG-cards-1.3/jack_of_hearts2.svg'
+      back: 'backs/Reverso_baraja.svg'
       species: jack
       suit: hearts
       value: 11
       hierarchicalValue: 39
     25:
       name: 'Queen of Hearts'
-      face: 'faces/hearts-queen.svg'
-      back: 'back/deck-back.svg'
+      face: 'faces/SVG-cards-1.3/queen_of_hearts2.svg'
+      back: 'backs/Reverso_baraja.svg'
       species: queen
       suit: hearts
       value: 12
       hierarchicalValue: 43
     26:
       name: 'King of Hearts'
-      face: 'faces/hearts-king.svg'
-      back: 'back/deck-back.svg'
+      face: 'faces/SVG-cards-1.3/king_of_hearts2.svg'
+      back: 'backs/Reverso_baraja.svg'
       species: king
       suit: hearts
       value: 13
       hierarchicalValue: 47
     27:
       name: 'Ace of Diamonds'
-      face: 'faces/diamonds-ace.svg'
-      back: 'back/deck-back.svg'
+      face: 'faces/SVG-cards-1.3/ace_of_diamonds.svg'
+      back: 'backs/Reverso_baraja.svg'
       species: ace
       suit: diamonds
       value: 1
       hierarchicalValue: 50
     28:
       name: 'Deuce of Diamonds'
-      face: 'faces/diamonds-deuce.svg'
-      back: 'back/deck-back.svg'
+      face: 'faces/SVG-cards-1.3/deuce_of_diamonds.svg'
+      back: 'backs/Reverso_baraja.svg'
       species: deuce
       suit: diamonds
       value: 2
       hierarchicalValue: 2
     29:
       name: 'Three of Diamonds'
-      face: 'faces/diamonds-three.svg'
-      back: 'back/deck-back.svg'
+      face: 'faces/SVG-cards-1.3/three_of_diamonds.svg'
+      back: 'backs/Reverso_baraja.svg'
       species: three
       suit: diamonds
       value: 3
       hierarchicalValue: 6
     30:
       name: 'Four of Diamonds'
-      face: 'faces/diamonds-four.svg'
-      back: 'back/deck-back.svg'
+      face: 'faces/SVG-cards-1.3/four_of_diamonds.svg'
+      back: 'backs/Reverso_baraja.svg'
       species: four
       suit: diamonds
       value: 4
       hierarchicalValue: 10
     31:
       name: 'Five of Diamonds'
-      face: 'faces/diamonds-five.svg'
-      back: 'back/deck-back.svg'
+      face: 'faces/SVG-cards-1.3/five_of_diamonds.svg'
+      back: 'backs/Reverso_baraja.svg'
       species: five
       suit: diamonds
       value: 5
       hierarchicalValue: 14
     32:
       name: 'Six of Diamonds'
-      face: 'faces/diamonds-six.svg'
-      back: 'back/deck-back.svg'
+      face: 'faces/SVG-cards-1.3/six_of_diamonds.svg'
+      back: 'backs/Reverso_baraja.svg'
       species: six
       suit: diamonds
       value: 6
       hierarchicalValue: 18
     33:
       name: 'Seven of Diamonds'
-      face: 'faces/diamonds-seven.svg'
-      back: 'back/deck-back.svg'
+      face: 'faces/SVG-cards-1.3/seven_of_diamonds.svg'
+      back: 'backs/Reverso_baraja.svg'
       species: seven
       suit: diamonds
       value: 7
       hierarchicalValue: 22
     34:
       name: 'Eight of Diamonds'
-      face: 'faces/diamonds-eight.svg'
-      back: 'back/deck-back.svg'
+      face: 'faces/SVG-cards-1.3/eight_of_diamonds.svg'
+      back: 'backs/Reverso_baraja.svg'
       species: eight
       suit: diamonds
       value: 8
       hierarchicalValue: 26
     35:
       name: 'Nine of Diamonds'
-      face: 'faces/diamonds-nine.svg'
-      back: 'back/deck-back.svg'
+      face: 'faces/SVG-cards-1.3/nine_of_diamonds.svg'
+      back: 'backs/Reverso_baraja.svg'
       species: nine
       suit: diamonds
       value: 9
       hierarchicalValue: 30
     36:
       name: 'Ten of Diamonds'
-      face: 'faces/diamonds-ten.svg'
-      back: 'back/deck-back.svg'
+      face: 'faces/SVG-cards-1.3/ten_of_diamonds.svg'
+      back: 'backs/Reverso_baraja.svg'
       species: ten
       suit: diamonds
       value: 10
       hierarchicalValue: 34
     37:
       name: 'Jack of Diamonds'
-      face: 'faces/diamonds-jack.svg'
-      back: 'back/deck-back.svg'
+      face: 'faces/SVG-cards-1.3/jack_of_diamonds2.svg'
+      back: 'backs/Reverso_baraja.svg'
       species: jack
       suit: diamonds
       value: 11
       hierarchicalValue: 38
     38:
       name: 'Queen of Diamonds'
-      face: 'faces/diamonds-queen.svg'
-      back: 'back/deck-back.svg'
+      face: 'faces/SVG-cards-1.3/queen_of_diamonds2.svg'
+      back: 'backs/Reverso_baraja.svg'
       species: queen
       suit: diamonds
       value: 12
       hierarchicalValue: 42
     39:
       name: 'King of Diamonds'
-      face: 'faces/diamonds-king.svg'
-      back: 'back/deck-back.svg'
+      face: 'faces/SVG-cards-1.3/king_of_diamonds2.svg'
+      back: 'backs/Reverso_baraja.svg'
       species: king
       suit: diamonds
       value: 13
       hierarchicalValue: 46
     40:
       name: 'Ace of Clubs'
-      face: 'faces/clubs-ace.svg'
-      back: 'back/deck-back.svg'
+      face: 'faces/SVG-cards-1.3/ace_of_clubs.svg'
+      back: 'backs/Reverso_baraja.svg'
       species: ace
       suit: clubs
       value: 1
       hierarchicalValue: 49
     41:
       name: 'Deuce of Clubs'
-      face: 'faces/clubs-deuce.svg'
-      back: 'back/deck-back.svg'
+      face: 'faces/SVG-cards-1.3/deuce_of_clubs.svg'
+      back: 'backs/Reverso_baraja.svg'
       species: deuce
       suit: clubs
       value: 2
       hierarchicalValue: 1
     42:
       name: 'Three of Clubs'
-      face: 'faces/clubs-three.svg'
-      back: 'back/deck-back.svg'
+      face: 'faces/SVG-cards-1.3/three_of_clubs.svg'
+      back: 'backs/Reverso_baraja.svg'
       species: three
       suit: clubs
       value: 3
       hierarchicalValue: 5
     43:
       name: 'Four of Clubs'
-      face: 'faces/clubs-four.svg'
-      back: 'back/deck-back.svg'
+      face: 'faces/SVG-cards-1.3/four_of_clubs.svg'
+      back: 'backs/Reverso_baraja.svg'
       species: four
       suit: clubs
       value: 4
       hierarchicalValue: 9
     44:
       name: 'Five of Clubs'
-      face: 'faces/clubs-five.svg'
-      back: 'back/deck-back.svg'
+      face: 'faces/SVG-cards-1.3/five_of_clubs.svg'
+      back: 'backs/Reverso_baraja.svg'
       species: five
       suit: clubs
       value: 5
       hierarchicalValue: 13
     45:
       name: 'Six of Clubs'
-      face: 'faces/clubs-six.svg'
-      back: 'back/deck-back.svg'
+      face: 'faces/SVG-cards-1.3/six_of_clubs.svg'
+      back: 'backs/Reverso_baraja.svg'
       species: six
       suit: clubs
       value: 6
       hierarchicalValue: 17
     46:
       name: 'Seven of Clubs'
-      face: 'faces/clubs-seven.svg'
-      back: 'back/deck-back.svg'
+      face: 'faces/SVG-cards-1.3/seven_of_clubs.svg'
+      back: 'backs/Reverso_baraja.svg'
       species: seven
       suit: clubs
       value: 7
       hierarchicalValue: 21
     47:
       name: 'Eight of Clubs'
-      face: 'faces/clubs-eight.svg'
-      back: 'back/deck-back.svg'
+      face: 'faces/SVG-cards-1.3/eight_of_clubs.svg'
+      back: 'backs/Reverso_baraja.svg'
       species: eight
       suit: clubs
       value: 8
       hierarchicalValue: 25
     48:
       name: 'Nine of Clubs'
-      face: 'faces/clubs-nine.svg'
-      back: 'back/deck-back.svg'
+      face: 'faces/SVG-cards-1.3/nine_of_clubs.svg'
+      back: 'backs/Reverso_baraja.svg'
       species: nine
       suit: clubs
       value: 9
       hierarchicalValue: 29
     49:
       name: 'Ten of Clubs'
-      face: 'faces/clubs-ten.svg'
-      back: 'back/deck-back.svg'
+      face: 'faces/SVG-cards-1.3/ten_of_clubs.svg'
+      back: 'backs/Reverso_baraja.svg'
       species: ten
       suit: clubs
       value: 10
       hierarchicalValue: 33
     50:
       name: 'Jack of Clubs'
-      face: 'faces/clubs-jack.svg'
-      back: 'back/deck-back.svg'
+      face: 'faces/SVG-cards-1.3/jack_of_clubs2.svg'
+      back: 'backs/Reverso_baraja.svg'
       species: jack
       suit: clubs
       value: 11
       hierarchicalValue: 37
     51:
       name: 'Queen of Clubs'
-      face: 'faces/clubs-queen.svg'
-      back: 'back/deck-back.svg'
+      face: 'faces/SVG-cards-1.3/queen_of_clubs2.svg'
+      back: 'backs/Reverso_baraja.svg'
       species: queen
       suit: clubs
       value: 12
       hierarchicalValue: 41
     52:
       name: 'King of Clubs'
-      face: 'faces/clubs-king.svg'
-      back: 'back/deck-back.svg'
+      face: 'faces/SVG-cards-1.3/king_of_clubs2.svg'
+      back: 'backs/Reverso_baraja.svg'
       species: king
       suit: clubs
       value: 13
